--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>winmac32</groupId>
     <artifactId>ViaWareAPI</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
     <name>ViaWare API</name>
     <url>https://github.com/WinMac32/ViaWareAPI</url>
 
@@ -15,6 +15,7 @@
             <groupId>com.almworks.sqlite4java</groupId>
             <artifactId>sqlite4java</artifactId>
             <version>1.0.392</version>
+			<scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
